# Bot-Server

./: .env.sample  Cargo.toml  README.md
.cargo/: config.toml
examples/: quick_dev.rs  read_api.rs  utils.rs
sql/dev_inits/: 00-recreate-db.sql  01-create-schema.sql  02-seed-dev.sql
src/: config.rs  ctx.rs  error.rs  event_handler.rs  log.rs  main.rs
src/_dev_init/: db.rs  mod.rs
src/commands/: battle.rs  hunt.rs  mod.rs
src/game_state/: error.rs  mod.rs
src/middlewares/: error.rs  mod.rs  mw_ctx_require.rs  mw_ctx_resolve.rs  mw_reponse_map.rs
src/models/: base_crud.rs  error.rs  mod.rs
src/models/bot/: mod.rs
src/models/discord_profile/: mod.rs
src/models/user/: mod.rs
src/models/wallet/: mod.rs
src/pwd/: mod.rs
src/routes/: error.rs  mod.rs  routes_login.rs  routes_static.rs
src/routes/rpc/: handler.rs  mod.rs  params.rs  user.rs
src/store/: mod.rs
src/sui_call/: mod.rs  utils.rs
src/sui_call/call_api/: create_bot.rs  create_profile.rs  error.rs  mod.rs
src/sui_call/read_api/: filter.rs  mod.rs  owned_objects.rs
src/sui_call/sui_move_object/: admin_obj.rs  bot_obj.rs  hero_obj.rs  mod.rs  pet_obj.rs
src/token/: error.rs  mod.rs
src/utils/: mod.rs  time.rs
web-public/: index.html
