[package]
name = "we_pet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"
# -- Web
axum = "0.6"
tower-http = { version = "0.4", features = ["fs"] }
# -- Data
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid"] }
sqlb = "0.4"
# -- Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# -- Hashing (pwd scheme-01 &token)
hmac = "0.12"
sha2 = "0.10"
# -- Others
base64 = "0.21"
uuid = { version = "1", features = ["v4", "fast-rng"] }
time = "0.3"
strum_macros = "0.25"
dotenvy = "0.15.7"
sui-sdk = { git = "https://github.com/MystenLabs/sui", package = "sui-sdk" }
sui-types = { git = "https://github.com/MystenLabs/sui" }
sui-json-rpc-types = { git = "https://github.com/MystenLabs/sui" }
sui-keys = { git = "https://github.com/MystenLabs/sui" }
shared-crypto = { git = "https://github.com/MystenLabs/sui" }
move-core-types = { git = "https://github.com/MystenLabs/sui" }
serenity = { version = "0.11", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
anyhow = "1"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tempfile = "3.8.1"

[dev-dependencies]
httpc-test = "0.1"
serial_test = "2"
rand = "0.8"       # For examples/gen-key
